Enhance list update logic to ensure unique list names and improve dark mode styles for select argument

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1258,3 +1258,11 @@ body.dark-mode .card,  body.dark-mode .list-card {
 body.dark-mode .subtask-dropdown li {
     color: #292b2e!important;
 }
+
+#select_arg {
+    color: #000 !important;
+}
+
+body.dark-mode #select_arg {
+    color: #fff !important;
+}
